--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,8 @@ inputs:
   workflow-file:
     description: 'workflow file to use'
     required: true   
+  status:
+    description: 'status of workflow'    
 outputs:
   run_id: 
     description: Run id
@@ -23,11 +25,9 @@ runs:
               owner,
               repo,
               workflow_id: workflow,
-              per_page: 1
+              per_page: 1,
+              status: '${{ inputs.status }}'
             });
-            const run = workflows.data.workflow_runs[0];
-            if (run.status !== 'completed') {
-              core.setFailed('The workflow did not complete in time.');
-            }            
+            const run = workflows.data.workflow_runs[0];                
             return run.id;
           result-encoding: string
